Sun Mar  8 16:57:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): match patterns against legacy short names
	  too, not only ordinary names.  [ruby-core:67954] [Bug #10819]

	* win32/dir.h (struct direct): add short name members.

	* win32/win32.c (opendir_internal, readdir_internal): ditto.

Sat Mar  7 09:36:05 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* array.c: document that first element is kept when using
	  Array#uniq and #uniq! [fix GH-845][ci skip]
	  Patch by @riffraff

Sat Mar  7 09:28:02 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* thread.c: Mutex#owned? is no longer experimental since 2.1.0
	  [fix GH-839][ci skip] Patch by @takiy33

Sat Mar  7 09:18:42 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/merger.rb: Added documentation to version method.
	  [fix GH-847][ci skip] Patch by @magikid

Fri Mar  6 22:50:36 2015  Koichi Sasada  <ko1@atdot.net>

	* class.c (rb_prepend_module): need a WB for klass -> origin.

Fri Mar  6 20:18:38 2015  Koichi Sasada  <ko1@atdot.net>

	* fix namespace issue on singleton class expressions. [Bug #10943]

	* vm_core.h, method.h: remove rb_iseq_t::cref_stack. CREF is stored
	  to rb_method_definition_t::body.iseq_body.cref.

	* vm_insnhelper.c: modify SVAR usage.
	  When calling ISEQ type method, push CREF information onto method
	  frame, SVAR located place. Before this fix, SVAR is simply nil.
	  After this patch, CREF (or NULL == Qfalse for not iseq methods)
	  is stored at the method invocation.

	  When SVAR is requierd, then put NODE_IF onto SVAR location,
	  and NDOE_IF::nd_reserved points CREF itself.

	* vm.c (vm_cref_new, vm_cref_dump, vm_cref_new_toplevel): added.

	* vm_insnhelper.c (vm_push_frame): accept CREF.

	* method.h, vm_method.c (rb_add_method_iseq): added. This function
	  accepts iseq and CREF.

	* class.c (clone_method): use rb_add_method_iseq().

	* gc.c (mark_method_entry): mark method_entry::body.iseq_body.cref.
